@@ -10,6 +10,7 @@
 #                                                                       #
 #########################################################################
 
+[54] --> DB/Quest: Fix: A Blade Fit For A Champion (Daily, 13741) (Thx malcrom and Aokromes)
 [53] --> Implement/Fix: Portbacksystem for Dalaran Sewer Arena (Thx Torrad)
 [52] --> Implement Top 5 Arenateams / Modify Top 5 Players (Thx Garyfisher & Torrad)
 [51] --> DB/Quest: Fix: The Art of Being a Water Terror (13091) (Thx Kirkhammett)
